Added more logos and edited main page

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
               <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
               <div class="hero-text">
                 <h1 class="main-title"><span></span><br>Cat-Thing Studio</h1>
-                <h3 class="sub-title">Games, Comics, and Animation</h3>
-                <a href="#" class="btn btn-lg btn-primary">Studio Information</a>
-                <ul class="social-links">
-                  <li class="label" style="background:black">Join me here</li>
-                  <li><a href="#"><img src="assets/behance.png"></a></li>
-                  <li><a href="#"><img src="assets/dribbble.png"></a></li>
-                  <li><a href="#"><img src="assets/twitter.png"></a></li>
-                  <li><a href="#"><img src="assets/github.png"></a></li>
+                <h3 class="sub-title" style="background-color: black;" >Games, Comics, and Animation</h3>
+                <!-- <a href="#" class="btn btn-lg btn-primary">Studio Information</a> -->
+                <ul class="social-links" style="background:black">
+                  <li class="sub-title" style="background:black">Social Links</li>
+                  <li><a href="https://www.youtube.com/@LoganCreates"><img src="assets/youtube.png"></a></li>
+                  <li><a href="https://www.tiktok.com/@loganmalcome"><img src="assets/tiktok.webp"></a></li>
+                  <li><a href="https://bsky.app/profile/loganmalcome.bsky.social"><img src="assets/bluesky.png"></a></li>
+                  <!-- <li><a href="#"><img src="assets/github.png"></a></li> -->
                 </ul>
               </div>
             </div>
@@ -74,42 +74,40 @@
 			
 			<p><b>Cat Thing Studio</b> produces and publishes Games, Animations, and Comics.</p>
 			
-              <h4 class="sub-heading">Coming Soon!</h4>
-              <h1 class="heading purple"><span class="purple">Terror On Planet X</span> <br>Wishlist it today on Steam!</h1>
+              <!-- <h4 class="sub-heading">Coming Soon!</h4> -->
+              <a href="https://store.steampowered.com/app/3480120/Moon_Maiden_Terror_on_Planet_X"><h1 class="heading purple"><span class="purple">Terror On Planet X</span> <br>Wishlist it today on Steam!</h1></a>
               <!-- Swiper -->
               <div class="swiper-container client-swiper">
                 <div class="swiper-wrapper">
-                 <!--  <div class="swiper-slide client-box">
-                    <img src="assets/logo-1.png" class="client-logo">
+
+                  <div class="swiper-slide client-box">
+                    <img src="assets/moon_maiden/combat_02_sm.jpg" class="client-logo">
+                    <h3 class="text-left title">Unique RPG Combat!</h3>
+
+                  </div>
+                  <div class="swiper-slide client-box">
+                    <img src="assets/moon_maiden/meet_phantom_sm.jpg" class="client-logo">
+                    <h3 class="text-left title">Multiple Player Characters!</h3>
+
+                  </div>
+				  
+                  <div class="swiper-slide client-box">
+                    <img src="assets/moon_maiden/Tempter_sm.jpg" class="client-logo">
+                    <h3 class="text-left title">Intrigue</h3>
+
+                  </div>
+                  <!-- <div class="swiper-slide client-box">
+              <img src="assets/logo-1.png" class="client-logo">
                     <h3 class="text-left title">Visual identity for upsidedown</h3>
                     <p class="text-left tag">Branding, UI, Website</p>
                     <p class="text-left"><a href="#">Know More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
-                    <img src="assets/logo-2.png" class="client-logo">
-                    <h3 class="text-left title">User Experience design for the AI</h3>
-                    <p class="text-left tag">Branding, UI, Website</p>
-                    <p class="text-left"><a href="#">Know More &#8594;</a></p>
-                  </div>
-				   -->
-                  <div class="swiper-slide client-box">
- <!--                    <img src="assets/logo-3.png" class="client-logo">
-                    <h3 class="text-left title">Rebranding of the best motion studio</h3>
-                    <p class="text-left tag">Branding, UI, Website</p>
-                    <p class="text-left"><a href="#">Know More &#8594;</a></p> -->
-                  </div>
-                  <div class="swiper-slide client-box">
-            <!--         <img src="assets/logo-1.png" class="client-logo">
+                     <img src="assets/logo-2.png" class="client-logo">
                     <h3 class="text-left title">Visual identity for upsidedown</h3>
                     <p class="text-left tag">Branding, UI, Website</p>
-                    <p class="text-left"><a href="#">Know More &#8594;</a></p> -->
-                  </div>
-                  <div class="swiper-slide client-box">
-          <!--           <img src="assets/logo-2.png" class="client-logo">
-                    <h3 class="text-left title">Visual identity for upsidedown</h3>
-                    <p class="text-left tag">Branding, UI, Website</p>
-                    <p class="text-left"><a href="#">Know More &#8594;</a></p> -->
-                  </div>
+                    <p class="text-left"><a href="#">Know More &#8594;</a></p> 
+                  </div> -->
                 </div>
                 
               </div>
@@ -126,8 +124,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
-              <h1>Let’s talk about your product</h1>
-              <a href="#" class="btn btn-lg btn-primary">Get in touch now</a>
+              <h1>Email feedback, join our mailing list, or further inquiries:</h1>
+              <a href="mailto:contact@catthing.studio" class="btn btn-lg btn-primary">Email Cat Thing Studio</a>
             </div>
           </div>
         </div>
@@ -138,18 +136,18 @@
         <div class="container-fluid">
           <div class="row footer">
             <div class="col-md-12 text-center">
-              <h1>Maria<br><span>Ferrero</span></h1>
+              <!-- <h1>Maria<br><span>Ferrero</span></h1>
               <ul class="social-links">
                 <li><a href="#"><img src="assets/behance.png"></a></li>
                 <li><a href="#"><img src="assets/dribbble.png"></a></li>
                 <li><a href="#"><img src="assets/twitter.png"></a></li>
                 <li><a href="#"><img src="assets/github.png"></a></li>
-              </ul>
+              </ul> -->
             </div>
           </div>
           <div class="row sub-footer">
             <div class="col-md-12 text-center">
-              <p>Designed by <a href="#" target="_blank">@realvjy</a> | Download <a href="http://designerdada.com/free-bootstrap-one-page-portfolio-template/">here</a></p>
+              <p>Template used was Designed by <a href="#" target="_blank">@realvjy</a> | Download <a href="http://designerdada.com/free-bootstrap-one-page-portfolio-template/">here</a></p>
             </div>
           </div>
         </div>
